--- a/static/js/package.json
+++ b/static/js/package.json
@@ -1,10 +1,16 @@
 {
+  "homepage":"http://yaldaalemi.github.io/belly-button-challenge",
   "name": "package",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
